styles/css/charadex.css
/* ... */
/* Navbar "Brand" aka title/logo */
.navbar .navbar-brand {
  color: var(--bs-primary);
  font-size: var(--cd-header-max-size);
  font-weight: bold;
  transition: color 0.2s ease-in-out;
}

.navbar .navbar-brand:hover,
.navbar .navbar-brand:focus {
  color: var(--bs-secondary);
}

@media (min-width: 768px) {
  .navbar .navbar-brand {
    font-size: calc(1.4rem + 1.5vw);
  }
}

/* Navbar Links */
.navbar .navbar-nav .nav-link, .nav.nav-pills .nav-item .nav-link {
  color: var(--bs-link-color);
  font-size: 1.5em;
  font-weight: bold;
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link:focus,
.nav.nav-pills .nav-item .nav-link:hover,
.nav.nav-pills .nav-item .nav-link:focus {
  color: var(--bs-link-hover-color);
}

.navbar .navbar-nav .nav-link.disabled,
.nav.nav-pills .nav-item .nav-link.disabled {
  color: var(--bs-tertiary-color) ;
}

.nav .nav-item {
  font-family: var(--cd-font-header);
  margin-bottom: 0 !important;
  padding-left: 0 !important;
}

/* Navbar Dropdowns */
.dropdown-menu {
  color: var(--bs-link-color) !important;
  background-color: var(--bs-body-bg) !important;
  border: var(--bs-border-color) var(--bs-border-style) var(--bs-border-width);
  border-radius: var(--bs-border-radius) !important;
}

.dropdown-menu .dropdown-header {
  color: var(--bs-body-color) !important;
}

.dropdown-item, .dropdown-menu .nav-item {
  color: var(--bs-body-color) !important;
  transition: color 0.2s ease-in-out;
}

.dropdown-item:hover,
.dropdown-item:focus,
.dropdown-item:active,
.dropdown-item.selected,
.dropdown-menu .nav-item:hover,
.dropdown-menu .nav-item:focus,
.dropdown-menu .nav-item:active {
  color: var(--bs-primary) !important;
}

.dropdown-menu .nav-item .nav-link {
  font-size: 1em;
  padding-left: 1em;
}

.navbar .dropdown-divider {
  border-top: var(--bs-border-color) var(--bs-border-style) var(--bs-border-width) !important;
  width: 100%;
  padding: 0;
}

/* ------------------------------------------------------------- */
/* Various Text Styling
/* ------------------------------------------------------------- */
blockquote {
  color: var(--bs-secondary);
  border-left: calc(var(--bs-border-width)*2) var(--bs-border-style) var(--bs-border-color);
  margin: 0 0 1rem;
  padding: 0 0 0 1em;
}

.text-justify {
  text-align: justify !important;
}

/* Headers */
h1, h2, h3, h4, h5, h6 {
  color: var(--bs-primary);
  font-family: var(--cd-font-header);
  font-weight: bold;
  text-transform: var(--cd-header-transform);
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none; /* remove header url underline */
}

.span-header { /* in-line 'header' */
  font-family: var(--cd-font-header);
  font-weight: bold;
  text-transform: var(--cd-header-transform);
}

.subtitle {
  font-family: var(--cd-fond-header);
  font-weight: bold;
  color: var(--bs-gray);
  font-size: var(--cd-header-min-size);
  text-align: center;
  margin-bottom: 0.5rem;
}

/* ------------------------------------------------------------- */
/* Bullets
/* ------------------------------------------------------------- */
ul {
  list-style-type: "✦";
}
ul li::marker {
  color: var(--bs-secondary) !important;
}

ol li::marker {
  color: var(--bs-primary);
  font-family: var(--cd-font-header);
}

#charadex-profile ul li, #charadex-profile ol li,
#main-card ul li, #main-card ol li {
  margin-bottom: 0.5em;
  padding-left: 0.5em;
}

/* ------------------------------------------------------------- */
/* Tooltips
/* ------------------------------------------------------------- */
.tooltip {
  z-index: 10000 !important;
}
.tooltip.show {
  opacity: 1 !important;
}

.cd-tooltip {
  /* only applies to tooltips with data-bs-custom-class="cd-tooltip" */
  --bs-tooltip-bg: var(--bs-primary);
  --bs-tooltip-color: var(--bs-white);
}

/* ------------------------------------------------------------- */
/* to Top & Bottom
/* ------------------------------------------------------------- */
/* These buttons are used on the character profile page          */
.to-top {
  right: calc((100vw - 950px) / 2 - 99px);
  top: 45%;
  width: 100px;
}
.to-bottom {
  right: calc((100vw - 950px) / 2 - 99px);
  bottom: 45%;
  width: 100px;
}

/* ------------------------------------------------------------- */
/* Loading
/* ------------------------------------------------------------- */
/* Spinner icon */
.loading {
  margin-top: 50vh;
  width: 100%;
  height: 100vh;
  text-align: center;
  position: absolute;
}
.loading.inactive {
  opacity: 0;
  transition: opacity 0.2s ease;
}

/* Fades container in on load so its not as jarring */
.softload {
  opacity: 0;
}
.softload.active {
  opacity: 1;
  transition: opacity 0.2s ease;
}

/* Specifically for the body */
#charadex-body {
  display: none;
  margin-top: 60px;
}
#charadex-body.active {
  display: block;
}

/* ------------------------------------------------------------- */
/* Hero images
/* ------------------------------------------------------------- */
.cd-hero-title {
  color: var(--bs-white);
  text-shadow: 0px 0px 3px var(--bs-black);
  background-color: var(--bs-secondary);
  background-position: center;
  background-size: cover;
  border-radius: var(--bs-border-radius);
  font-family: var(--cd-font-header);
  text-transform: var(--cd-header-transform);
  text-align: center;
  font-weight: 800;
  font-size: calc(var(--cd-header-min-size) + var(--cd-header-inc-size) * 3);
  line-height: 1em;
  padding: 1em;
}
@media (min-width: 768px) {
  .cd-hero-title {
    letter-spacing: 2px;
  }
}

/* ************************************************************* */
/*                        5. Tweaks
/* ************************************************************* */
/* Adjustments to things that probably don't need changing
/* unless they're really screwing with your styles.
/*
/* ************************************************************* */
img {
  image-rendering: -webkit-optimize-contrast;
}

.img-fluid {
  object-fit: contain;
  max-height: 600px;
}
/* ... */

